--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@angular/compiler": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/router": "^12.2.16",
     "express": "^4.18.1",
+    "firebase": "^9.10.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.37",
     "tslib": "^2.3.0",
     "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
